tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/destinationrule/only_idletimeout_specified_in_DR/_test_context/DestinationRule.667039917.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: idletimeout-dr
  namespace: echo-2-20468
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 100s
    tls:
      mode: DISABLE
